force-app/src/objects/EventApi__Venue__c.object
<CustomObject>
    <description>Manage Event Locations and Venues.</description>
    <fields>
        <fullName>EventApi__City__c</fullName>
        <description>The physical address (city) for the venue.</description>
        <inlineHelpText>The physical address (city) for the venue.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Country__c</fullName>
        <description>The country where the venue is located.</description>
        <inlineHelpText>The country where the venue is located.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional description for the Venue.</description>
        <inlineHelpText>Optional description for the Venue.</inlineHelpText>
        <label>DEPRECATED</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked and the venue address is entered, displays a Google map on the event page as part of the venue information.</description>
        <inlineHelpText>When checked and the venue address is entered, displays a Google map on the event page as part of the venue information.</inlineHelpText>
        <label>Display Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event category. When linked, this venue will be included automatically in new events created within the same category.</description>
        <inlineHelpText>Link to the related event category. When linked, this venue will be included automatically in new events created within the same category.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Venues (Template)</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Location__c</fullName>
        <description>The value populated in this field helps show the event in the geo-location view in the event listing page.</description>
        <inlineHelpText>The value populated in this field helps show the event in the geo-location view in the event listing page.</inlineHelpText>
        <label>Event Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event.</description>
        <inlineHelpText>Link to the related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__HTML_Description__c</fullName>
        <description>Optional description for the Venue.</description>
        <inlineHelpText>Optional description for the Venue.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_URL__c</fullName>
        <description>Image displays with the venue information.</description>
        <inlineHelpText>Image displays with the venue information.e</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Primary_Venue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the venue is displayed first.</description>
        <inlineHelpText>When checked, the venue is displayed first.</inlineHelpText>
        <label>Is Primary Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Phone__c</fullName>
        <description>The displayed phone number for the venue.</description>
        <inlineHelpText>The displayed phone number for the venue.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EventApi__Postal_Code__c</fullName>
        <description>The physical address (postal code) for the venue.</description>
        <inlineHelpText>The physical address (postal code) for the venue.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__State__c</fullName>
        <description>The physical address (state/province/county) for the venue.</description>
        <inlineHelpText>The physical address (state/province/county) for the venue.</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Street__c</fullName>
        <description>The physical street address for the venue.</description>
        <inlineHelpText>The physical street address for the venue.</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Website__c</fullName>
        <description>The displayed website for the venue.</description>
        <inlineHelpText>The displayed website for the venue.</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guide__c</fullName>
        <description>Fetching Guide_Id from EventApi__Event__c object</description>
        <formula>EventApi__Event__r.MobileApi__Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guidebook_Location_Import_Id__c</fullName>
        <label>Guidebook Location Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guidebook_Location_Latitude__c</fullName>
        <label>Guidebook Location Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Guidebook_Location_Longitude__c</fullName>
        <label>Guidebook Location Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MobileApi__Location_Id__c</fullName>
        <externalId>true</externalId>
        <label>Location ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>